Fix min-height overlap on .main container and .container container

--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@
 
 .container {
     display: grid;
-    grid-template: 100vh / minmax(160px, .75fr) 3fr;
+    grid-template: 1fr / minmax(165px, .75fr) 3fr;
+    height: 100vh;
+    width: 100vw;
     min-width: 765px;
-    min-height: 500px;
+    min-height: 525px;
 }
 
 .sidebar {
     background-color: #7D70BA;
-    grid-area: 1 / 1 / 3 / 2;
-    min-height: 500px;
+    grid-area: 1 / 1 / 2 / 2;
     box-shadow: .5px .5px 1px #82877f;
     z-index: 100;
 }
@@ -80,8 +81,6 @@
 .main {
     display: grid;
     grid-template: minmax(125px, .25fr) 1fr 25px / 100%;
-    min-height: 500px;
-
 }
 
 .header {
@@ -212,8 +211,9 @@ p.hello-name {
 }
 
 .buttons button:hover {
-    background-color: #7D70BA;
+    background-color: #DEC1FF;
     font-weight: 600;
+    box-shadow: 1px 1px 2px #82877f;
 }
 
 .content {
@@ -266,18 +266,26 @@ p.hello-name {
     position: relative;
 }
 
+.project-card:hover,
+.announcements:hover,
+.trending:hover {
+    border-left: #7D70BA 5px solid;
+    box-shadow: 1px 1px 2px #82877f;
+    cursor: pointer;
+}
+
 .project-card h3 {
     font-family: 'Bitter', sans-serif;
     font-size: clamp(.75rem, 2vh, 2rem); 
     color: #343633;
-    padding: 10px 0 0 5px;
+    padding: 10px 0 0 10px;
 }
 
 .project-card p {
     font-family: "Dosis", sans-serif;
     font-size: clamp(.5rem, 2vh, 2rem); 
     color: #343633;
-    padding: 5px 5px 20px 5px;
+    padding: 5px 10px 20px 10px;
 }
 
 .project-icons {
@@ -295,10 +303,9 @@ p.hello-name {
     opacity: .8;
 }
 
-.project-card img:hover {
+.content img:hover {
     transform: scale(1.1);
 }
-
 
 .made-by {
     background-color: #e4e1df;
